Guide layout: openers page reading mode

--- a/guides/openers-that-get-replies.html
+++ b/guides/openers-that-get-replies.html
@@ -89,6 +89,7 @@
         }
       }
     </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -115,90 +116,49 @@
         ]
       }
     </script>
+
     <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "FAQPage",
-    "mainEntity": [
       {
-        "@type": "Question",
-        "name": "When should I ask her out after she replies?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Within 5 to 15 messages if the vibe is good. Keep it simple and offer 2 options for time or activity."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "What do I do if she says maybe?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Reply with 1 easy next step: suggest 2 specific times or a smaller plan like coffee. Do not debate or over explain."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "What if she replies slowly?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Send 1 light follow up that matches the opener tone, then stop. If she is interested, she will re engage."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Should I switch to a phone call?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Default to text. Only suggest a call if she already seems comfortable with it or asks for it."
-        }
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "When should I ask her out after she replies?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Within 5 to 15 messages if the vibe is good. Keep it simple and offer 2 options for time or activity."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What do I do if she says maybe?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Reply with 1 easy next step: suggest 2 specific times or a smaller plan like coffee. Do not debate or over explain."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What if she replies slowly?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Send 1 light follow up that matches the opener tone, then stop. If she is interested, she will re engage."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Should I switch to a phone call?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Default to text. Only suggest a call if she already seems comfortable with it or asks for it."
+            }
+          }
+        ]
       }
-    ]
-  }
-</script>
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "When should I ask her out after she replies?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Within 5 to 15 messages if the vibe is good. Keep it simple and offer 2 options for time or activity."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "What do I do if she says maybe?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Reply with 1 easy next step: suggest 2 specific times or a smaller plan like coffee. Do not debate or over explain."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "What if she replies slowly?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Send 1 light follow up that matches the opener tone, then stop. If she is interested, she will re engage."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Should I switch to a phone call?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Default to text. Only suggest a call if she already seems comfortable with it or asks for it."
-        }
-      }
-    ]
-  }
-</script>
-
-</head>
-
+    </script>
   </head>
+
   <body>
     <header class="site-header">
       <div class="container">
@@ -214,18 +174,25 @@
       </div>
     </header>
 
-    <main>
-      <article class="container">
+    <main class="container guide">
+      <article class="prose">
+        <p class="meta">
+          <a href="/">Home</a> / <a href="/guides/">Guides</a> / Openers that
+          get replies
+        </p>
+
         <header class="article-hero">
           <h1>Openers that get replies</h1>
+          <p class="meta">
+            Updated 2025-09-19 • 10 openers • Copy buttons included
+          </p>
           <p class="lede">
-            Pick one opener, paste it, then follow the matching reply path. Keep
+            Pick 1 opener, paste it, then follow the matching reply path. Keep
             it fun and respectful.
           </p>
         </header>
 
-        <!-- Quick choose: two second navigation -->
-        <nav class="quick-choose" aria-label="Quick choose openers">
+        <nav class="toc" aria-label="Quick choose openers">
           <a class="pill" href="#opener-1">Direct plan</a>
           <a class="pill" href="#opener-2">Dog line</a>
           <a class="pill" href="#opener-3">Music and dessert</a>
@@ -238,7 +205,6 @@
           <a class="pill" href="#opener-10">Movie or cook night</a>
         </nav>
 
-        <!-- Opener cards -->
         <section class="opener" id="opener-1">
           <h2>Direct plan</h2>
           <div class="card">
@@ -257,7 +223,7 @@
             <summary>Follow ups</summary>
             <ul>
               <li>If yes: Let us do it. Wed 6:30 or Sat 1 pm?</li>
-              <li>If maybe: Quick call Thu to swap neighborhood picks?</li>
+              <li>If maybe: Quick question: Thu 6:30 or Sat 1 pm?</li>
             </ul>
           </details>
         </section>
@@ -350,7 +316,7 @@
                 pastry flight?
               </li>
               <li>
-                If maybe: Quick phone chat first? I have a 10 minute story.
+                If maybe: Quick follow up: which day works better, Sat or Sun?
               </li>
             </ul>
           </details>
@@ -396,9 +362,7 @@
             <summary>Follow ups</summary>
             <ul>
               <li>If yes: I will trade you gelato knowledge.</li>
-              <li>
-                If maybe: Ten minute call first so I do not embarrass myself?
-              </li>
+              <li>If maybe: Quick follow up: what day are you usually free?</li>
             </ul>
           </details>
         </section>
@@ -441,7 +405,9 @@
             <summary>Follow ups</summary>
             <ul>
               <li>If yes: You start. I will match the energy.</li>
-              <li>If maybe: Quick voice note. Way more fun.</li>
+              <li>
+                If maybe: Text me your 1 sentence version and I will match it.
+              </li>
             </ul>
           </details>
         </section>
@@ -469,59 +435,60 @@
           </details>
         </section>
 
-<section class="next-steps">
-  <h2>Next steps</h2>
-  <p>
-    Tighten your profile with the
-    <a href="/guides/profile-photo-checklist.html">Profile Photo Checklist</a>,
-    write a strong bio with
-    <a href="/guides/bio-templates.html">Bio Templates by Personality</a>, then
-    line up your plan with the
-    <a href="/playbooks/first-date-playbook.html">First Date Playbook</a>.
-  </p>
-</section>
+        <section class="next-steps">
+          <h2>Next steps</h2>
+          <p>
+            Tighten your profile with the
+            <a href="/guides/profile-photo-checklist.html"
+              >Profile Photo Checklist</a
+            >, write a strong bio with
+            <a href="/guides/bio-templates.html">Bio Templates by Personality</a
+            >, then line up your plan with the
+            <a href="/playbooks/first-date-playbook.html">First Date Playbook</a
+            >.
+          </p>
+        </section>
 
-<section class="faq" aria-label="FAQ">
-  <h2>FAQ</h2>
+        <section class="faq" aria-label="FAQ">
+          <h2>FAQ</h2>
 
-  <details>
-    <summary>When should I ask her out after she replies?</summary>
-    <p>
-      Within 5 to 15 messages if the vibe is good. Keep it simple and offer 2
-      options for time or activity.
-    </p>
-  </details>
+          <details>
+            <summary>When should I ask her out after she replies?</summary>
+            <p>
+              Within 5 to 15 messages if the vibe is good. Keep it simple and
+              offer 2 options for time or activity.
+            </p>
+          </details>
 
-  <details>
-    <summary>What do I do if she says maybe?</summary>
-    <p>
-      Reply with 1 easy next step: suggest 2 specific times or a smaller plan
-      like coffee. Do not debate or over explain.
-    </p>
-  </details>
+          <details>
+            <summary>What do I do if she says maybe?</summary>
+            <p>
+              Reply with 1 easy next step: suggest 2 specific times or a smaller
+              plan like coffee. Do not debate or over explain.
+            </p>
+          </details>
 
-  <details>
-    <summary>What if she replies slowly?</summary>
-    <p>
-      Send 1 light follow up that matches the opener tone, then stop. If she is
-      interested, she will re engage.
-    </p>
-  </details>
+          <details>
+            <summary>What if she replies slowly?</summary>
+            <p>
+              Send 1 light follow up that matches the opener tone, then stop. If
+              she is interested, she will re engage.
+            </p>
+          </details>
 
-  <details>
-    <summary>Should I switch to a phone call?</summary>
-    <p>
-      Default to text. Only suggest a call if she already seems comfortable with
-      it or asks for it.
-    </p>
-  </details>
-</section>
+          <details>
+            <summary>Should I switch to a phone call?</summary>
+            <p>
+              Default to text. Only suggest a call if she already seems
+              comfortable with it or asks for it.
+            </p>
+          </details>
+        </section>
 
-<section class="disclosure" aria-label="Disclosure">
-  <p>Some links may earn a commission. Your price does not change.</p>
-</section>
-</article>
-
+        <section class="disclosure" aria-label="Disclosure">
+          <p>Some links may earn a commission. Your price does not change.</p>
+        </section>
+      </article>
     </main>
 
     <footer class="site-footer">
@@ -537,10 +504,8 @@
     </footer>
 
     <script>
-      // Set year
       document.getElementById("yr").textContent = new Date().getFullYear();
 
-      // Copy buttons
       function copyText(str) {
         if (navigator.clipboard && window.isSecureContext) {
           return navigator.clipboard.writeText(str);
@@ -572,6 +537,5 @@
         });
       });
     </script>
-
-    </body>
+  </body>
 </html>
