--- a/guides/index.html
+++ b/guides/index.html
@@ -46,7 +46,7 @@
     <meta property="og:url" content="https://dategirlseasy.com/guides/" />
     <meta
       property="og:image"
-      content="https://dategirlseasy.com/assets/og/openers.jpg"
+      content="https://dategirlseasy.com/assets/og/default.jpg"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Guides | Date Girls Easy" />
@@ -56,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://dategirlseasy.com/assets/og/openers.jpg"
+      content="https://dategirlseasy.com/assets/og/default.jpg"
     />
 
     <!-- Structured data -->
@@ -65,13 +65,49 @@
         "@context": "https://schema.org",
         "@type": "CollectionPage",
         "name": "Guides",
-        "description": "Central hub for Date Girls Easy guides.",
+        "description": "All guides in one place. Start with photos and bio, then move to openers and first date planning.",
+        "inLanguage": "en",
+        "publisher": { "@type": "Organization", "name": "DGE Inc." },
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": "https://dategirlseasy.com/guides/"
         }
       }
     </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ItemList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Profile Photo Checklist",
+            "url": "https://dategirlseasy.com/guides/profile-photo-checklist.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Bio Templates",
+            "url": "https://dategirlseasy.com/guides/bio-templates.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Openers That Get Replies",
+            "url": "https://dategirlseasy.com/guides/openers-that-get-replies.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "First Date Playbook",
+            "url": "https://dategirlseasy.com/playbooks/first-date-playbook.html"
+          }
+        ]
+      }
+    </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
