--- a/guides/profile-photo-checklist.html
+++ b/guides/profile-photo-checklist.html
@@ -142,10 +142,16 @@
       </div>
     </header>
 
-    <main>
-      <article class="container">
+    <main class="container guide">
+      <article class="prose">
+        <p class="meta">
+          <a href="/">Home</a> / <a href="/guides/">Guides</a> / Profile photo
+          checklist
+        </p>
+
         <header class="article-hero">
           <h1>Profile photo checklist for dating apps</h1>
+          <p class="meta">Updated 2025-09-19 • Photo checklist</p>
           <p class="lede">
             Quick wins that work on every app. Keep it natural and PG 13.
           </p>
@@ -155,9 +161,9 @@
           <h2>What to shoot</h2>
           <ul>
             <li>Clear head and shoulders in natural light</li>
-            <li>One full length standing photo</li>
-            <li>One candid doing something you enjoy</li>
-            <li>One social photo with friends where you are centered</li>
+            <li>1 full length standing photo</li>
+            <li>1 candid doing something you enjoy</li>
+            <li>1 social photo with friends where you are centered</li>
           </ul>
         </section>
 
@@ -180,7 +186,7 @@
           </ul>
         </section>
 
-        <section>
+        <section class="next-steps">
           <h2>Next steps</h2>
           <p>
             Read
