--- a/playbooks/first-date-playbook.html
+++ b/playbooks/first-date-playbook.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>
+      First Date Playbook: Easy Plans That Feel Natural | Date Girls Easy
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>First Date Playbook: Easy Plans That Feel Natural</title>
     <meta
       name="description"
       content="A simple first date plan that feels relaxed and fun. Coffee, walk, or dessert routes with exact texts to set it up."
@@ -13,6 +15,31 @@
       rel="canonical"
       href="https://dategirlseasy.com/playbooks/first-date-playbook.html"
     />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
+
+    <!-- Theme color -->
+    <meta name="theme-color" content="#6E4CFF" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap"
+      />
+    </noscript>
+
+    <!-- Styles -->
     <link rel="stylesheet" href="/styles.css" />
 
     <!-- Open Graph -->
@@ -29,6 +56,10 @@
       property="og:url"
       content="https://dategirlseasy.com/playbooks/first-date-playbook.html"
     />
+    <meta
+      property="og:image"
+      content="https://dategirlseasy.com/assets/og/default.jpg"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -40,6 +71,10 @@
       name="twitter:description"
       content="Coffee, walk, and dessert routes with exact texts to set it up."
     />
+    <meta
+      name="twitter:image"
+      content="https://dategirlseasy.com/assets/og/default.jpg"
+    />
 
     <!-- Article schema -->
     <script type="application/ld+json">
@@ -47,14 +82,21 @@
         "@context": "https://schema.org",
         "@type": "Article",
         "headline": "First Date Playbook: Easy Plans That Feel Natural",
-        "description": "A simple first date plan with exact texts and routes.",
-        "author": { "@type": "Organization", "name": "Date Girls Easy" },
-        "publisher": { "@type": "Organization", "name": "Date Girls Easy" },
-        "datePublished": "2025-09-15",
-        "dateModified": "2025-09-15",
+        "description": "A simple first date plan that feels relaxed and fun. Coffee, walk, or dessert routes with exact texts to set it up.",
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": "https://dategirlseasy.com/playbooks/first-date-playbook.html"
+        },
+        "datePublished": "2025-09-15",
+        "dateModified": "2025-09-19",
+        "author": { "@type": "Organization", "name": "DGE Inc." },
+        "publisher": {
+          "@type": "Organization",
+          "name": "DGE Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://dategirlseasy.com/assets/logo.png"
+          }
         }
       }
     </script>
@@ -75,6 +117,12 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Playbooks",
+            "item": "https://dategirlseasy.com/playbooks/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "First Date Playbook",
             "item": "https://dategirlseasy.com/playbooks/first-date-playbook.html"
           }
         ]
@@ -122,110 +170,135 @@
   </head>
 
   <body>
-    <header class="wrap">
-      <a href="/" class="brand">Date Girls Easy</a>
+    <header class="site-header">
+      <div class="container">
+        <a class="brand" href="/" aria-label="Date Girls Easy"
+          >Date Girls Easy</a
+        >
+        <nav class="top-nav" aria-label="Main">
+          <a href="/how-it-works.html">How it works</a>
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">App reviews</a>
+          <a href="/join.html" class="button">Join</a>
+        </nav>
+      </div>
     </header>
 
-    <main class="wrap">
-      <nav class="breadcrumb">
-        <a href="/">Home</a> › <a href="/guides/">Guides</a> › First Date
-        Playbook
-      </nav>
-
-      <h1>First Date Playbook: Easy Plans That Feel Natural</h1>
-      <p class="muted">
-        Three low-pressure routes with exact texts to set it up. Pick one and
-        go.
-      </p>
-
-      <section class="route">
-        <h3>Route A: Coffee + Walk (60–90 minutes)</h3>
-        <ol class="steps">
-          <li>Coffee at a bright café (20–30 minutes)</li>
-          <li>Short walk to a park or bookstore (20–30 minutes)</li>
-          <li>Exit or extend based on vibe</li>
-        </ol>
-        <div class="template">
-          <strong>Text to set it up:</strong>
-          <code
-            >Let’s keep it easy: cappuccinos at [cafe] then a quick walk? Wed
-            6:30 or Sat 1pm?</code
-          >
-        </div>
-        <div class="template">
-          <strong>Extend if it’s going well:</strong>
-          <code>There’s a bookstore around the corner — 15 minutes?</code>
-        </div>
-      </section>
-
-      <section class="route">
-        <h3>Route B: Dessert First (60 minutes)</h3>
-        <ol class="steps">
-          <li>Meet at a dessert spot (30 minutes)</li>
-          <li>Short seated chat nearby (30 minutes)</li>
-        </ol>
-        <div class="template">
-          <strong>Text to set it up:</strong>
-          <code
-            >I’m pro-dessert. Gelato at [place] then a quick lounge nearby? Thu
-            7 or Sun 6?</code
-          >
-        </div>
-        <div class="template">
-          <strong>If she’s unsure:</strong>
-          <code
-            >15 minutes to taste test and bail with no hard feelings if it’s not
-            a fit.</code
-          >
-        </div>
-      </section>
-
-      <section class="route">
-        <h3>Route C: Casual Night Out (90 minutes)</h3>
-        <ol class="steps">
-          <li>Meet at a lively spot with easy seating (45 minutes)</li>
-          <li>Walk to a second location (45 minutes)</li>
-        </ol>
-        <div class="template">
-          <strong>Text to set it up:</strong>
-          <code>Pick the playlist, I’ll pick the spot. Fri 7 or Sat 6:30?</code>
-        </div>
-        <div class="template">
-          <strong>Polite exit if needed:</strong>
-          <code
-            >I’ve got an early morning — let’s call it here, but this was
-            fun.</code
-          >
-        </div>
-      </section>
-
-      <section class="cta-box">
-        <h3>Next step: Second Date Blueprint</h3>
-        <p>Keep momentum and make the follow-up natural.</p>
-        <p class="muted">
-          Coming soon. For now, use these to line up more first dates:
+    <main class="container guide">
+      <article class="prose">
+        <p class="meta">
+          <a href="/">Home</a> / <a href="/playbooks/">Playbooks</a> / First
+          Date Playbook
         </p>
-        <p>
-          <a href="/guides/openers-that-get-replies.html"
-            >Openers that get replies</a
-          >
-          ·
-          <a href="/guides/bio-templates.html">Bio templates</a>
-        </p>
-      </section>
 
-      <section aria-label="Disclosure">
-        <p class="muted">
-          Some links may earn a commission at no cost to you. We only recommend
-          tools that pass our test plan.
-        </p>
-      </section>
+        <header class="article-hero">
+          <h1>First Date Playbook: Easy Plans That Feel Natural</h1>
+          <p class="meta">
+            Updated 2025-09-19 • 3 routes • Exact texts included
+          </p>
+          <p class="lede">
+            Three low pressure routes with exact texts to set it up. Pick 1 and
+            go.
+          </p>
+        </header>
+
+        <section class="route">
+          <h2>Route A: Coffee and walk</h2>
+          <p class="meta">60 to 90 minutes</p>
+          <ol class="steps">
+            <li>Coffee at a bright cafe, 20 to 30 minutes</li>
+            <li>Short walk to a park or bookstore, 20 to 30 minutes</li>
+            <li>Exit or extend based on vibe</li>
+          </ol>
+          <div class="template">
+            <strong>Text to set it up:</strong>
+            <code
+              >Let’s keep it easy: cappuccinos at [cafe] then a quick walk? Wed
+              6:30 or Sat 1 pm?</code
+            >
+          </div>
+          <div class="template">
+            <strong>Extend if it’s going well:</strong>
+            <code>There’s a bookstore around the corner. 15 minutes?</code>
+          </div>
+        </section>
+
+        <section class="route">
+          <h2>Route B: Dessert first</h2>
+          <p class="meta">60 minutes</p>
+          <ol class="steps">
+            <li>Meet at a dessert spot, 30 minutes</li>
+            <li>Short seated chat nearby, 30 minutes</li>
+          </ol>
+          <div class="template">
+            <strong>Text to set it up:</strong>
+            <code
+              >I’m pro dessert. Gelato at [place] then a quick lounge nearby?
+              Thu 7 or Sun 6?</code
+            >
+          </div>
+          <div class="template">
+            <strong>If she’s unsure:</strong>
+            <code
+              >15 minutes to taste test and bail with no hard feelings if it’s
+              not a fit.</code
+            >
+          </div>
+        </section>
+
+        <section class="route">
+          <h2>Route C: Casual night out</h2>
+          <p class="meta">90 minutes</p>
+          <ol class="steps">
+            <li>Meet at a lively spot with easy seating, 45 minutes</li>
+            <li>Walk to a second location, 45 minutes</li>
+          </ol>
+          <div class="template">
+            <strong>Text to set it up:</strong>
+            <code
+              >Pick the playlist, I’ll pick the spot. Fri 7 or Sat 6:30?</code
+            >
+          </div>
+          <div class="template">
+            <strong>Polite exit if needed:</strong>
+            <code
+              >I’ve got an early morning. Let’s call it here, but this was
+              fun.</code
+            >
+          </div>
+        </section>
+
+        <section class="cta-box">
+          <h2>Next step: Second date blueprint</h2>
+          <p>Coming soon. For now, use these to line up more first dates:</p>
+          <p>
+            <a href="/guides/openers-that-get-replies.html"
+              >Openers that get replies</a
+            >
+            · <a href="/guides/bio-templates.html">Bio templates</a>
+          </p>
+        </section>
+
+        <section class="disclosure" aria-label="Disclosure">
+          <p>Some links may earn a commission. Your price does not change.</p>
+        </section>
+      </article>
     </main>
 
-    <footer class="wrap">Date Girls Easy © <span id="y"></span></footer>
+    <footer class="site-footer">
+      <div class="container">
+        <nav class="footer-nav" aria-label="Footer">
+          <a href="/how-it-works.html">How it works</a>
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">App reviews</a>
+          <a href="/join.html">Join</a>
+        </nav>
+        <p>© <span id="yr"></span> Date Girls Easy</p>
+      </div>
+    </footer>
 
     <script>
-      document.getElementById("y").textContent = new Date().getFullYear();
+      document.getElementById("yr").textContent = new Date().getFullYear();
     </script>
   </body>
 </html>
