--- a/playbooks/first-date-playbook.html
+++ b/playbooks/first-date-playbook.html
@@ -76,7 +76,7 @@
       content="https://dategirlseasy.com/assets/og/default.jpg"
     />
 
-    <!-- Article schema -->
+    <!-- Schema.org Article -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -188,94 +188,119 @@
       <article class="prose">
         <p class="meta">
           <a href="/">Home</a> / <a href="/playbooks/">Playbooks</a> / First
-          Date Playbook
+          date playbook
         </p>
 
         <header class="article-hero">
           <h1>First Date Playbook: Easy Plans That Feel Natural</h1>
-          <p class="meta">
-            Updated 2025-09-19 • 3 routes • Exact texts included
-          </p>
+          <p class="meta">Updated 2025-09-19 • 3 routes • Copy ready texts</p>
           <p class="lede">
             Three low pressure routes with exact texts to set it up. Pick 1 and
             go.
           </p>
         </header>
 
-        <section class="route">
+        <nav class="toc" aria-label="Choose a route">
+          <a class="pill" href="#route-a">Coffee and walk</a>
+          <a class="pill" href="#route-b">Dessert first</a>
+          <a class="pill" href="#route-c">Casual night out</a>
+        </nav>
+
+        <section class="route" id="route-a">
           <h2>Route A: Coffee and walk</h2>
           <p class="meta">60 to 90 minutes</p>
           <ol class="steps">
-            <li>Coffee at a bright cafe, 20 to 30 minutes</li>
-            <li>Short walk to a park or bookstore, 20 to 30 minutes</li>
+            <li>Coffee at a bright café (20 to 30 minutes)</li>
+            <li>Short walk to a park or bookstore (20 to 30 minutes)</li>
             <li>Exit or extend based on vibe</li>
           </ol>
+
           <div class="template">
             <strong>Text to set it up:</strong>
-            <code
-              >Let’s keep it easy: cappuccinos at [cafe] then a quick walk? Wed
-              6:30 or Sat 1 pm?</code
-            >
+            <div>
+              <code
+                >Let us keep it easy: cappuccinos at [cafe] then a quick walk.
+                Wed 6:30 or Sat 1?</code
+              >
+            </div>
           </div>
+
           <div class="template">
-            <strong>Extend if it’s going well:</strong>
-            <code>There’s a bookstore around the corner. 15 minutes?</code>
+            <strong>Extend if it is going well:</strong>
+            <div>
+              <code>There is a bookstore around the corner. 15 minutes?</code>
+            </div>
           </div>
         </section>
 
-        <section class="route">
+        <section class="route" id="route-b">
           <h2>Route B: Dessert first</h2>
           <p class="meta">60 minutes</p>
           <ol class="steps">
-            <li>Meet at a dessert spot, 30 minutes</li>
-            <li>Short seated chat nearby, 30 minutes</li>
+            <li>Meet at a dessert spot (30 minutes)</li>
+            <li>Short seated chat nearby (30 minutes)</li>
           </ol>
+
           <div class="template">
             <strong>Text to set it up:</strong>
-            <code
-              >I’m pro dessert. Gelato at [place] then a quick lounge nearby?
-              Thu 7 or Sun 6?</code
-            >
+            <div>
+              <code
+                >I am pro dessert. Gelato at [place] then a quick lounge nearby.
+                Thu 7 or Sun 6?</code
+              >
+            </div>
           </div>
+
           <div class="template">
-            <strong>If she’s unsure:</strong>
-            <code
-              >15 minutes to taste test and bail with no hard feelings if it’s
-              not a fit.</code
-            >
+            <strong>If she is unsure:</strong>
+            <div>
+              <code
+                >15 minutes to taste test and bail with no hard feelings if it
+                is not a fit.</code
+              >
+            </div>
           </div>
         </section>
 
-        <section class="route">
+        <section class="route" id="route-c">
           <h2>Route C: Casual night out</h2>
           <p class="meta">90 minutes</p>
           <ol class="steps">
-            <li>Meet at a lively spot with easy seating, 45 minutes</li>
-            <li>Walk to a second location, 45 minutes</li>
+            <li>Meet at a lively spot with easy seating (45 minutes)</li>
+            <li>Walk to a second location (45 minutes)</li>
           </ol>
+
           <div class="template">
             <strong>Text to set it up:</strong>
-            <code
-              >Pick the playlist, I’ll pick the spot. Fri 7 or Sat 6:30?</code
-            >
+            <div>
+              <code
+                >Pick the playlist, I will pick the spot. Fri 7 or Sat
+                6:30?</code
+              >
+            </div>
           </div>
+
           <div class="template">
             <strong>Polite exit if needed:</strong>
-            <code
-              >I’ve got an early morning. Let’s call it here, but this was
-              fun.</code
-            >
+            <div>
+              <code
+                >I have an early morning. Let us call it here, but this was
+                fun.</code
+              >
+            </div>
           </div>
         </section>
 
-        <section class="cta-box">
-          <h2>Next step: Second date blueprint</h2>
-          <p>Coming soon. For now, use these to line up more first dates:</p>
+        <section class="next-steps">
+          <h2>Next steps</h2>
           <p>
+            Use these to line up more first dates:
             <a href="/guides/openers-that-get-replies.html"
               >Openers that get replies</a
-            >
-            · <a href="/guides/bio-templates.html">Bio templates</a>
+            >, <a href="/guides/bio-templates.html">Bio templates</a>,
+            <a href="/guides/profile-photo-checklist.html"
+              >Profile photo checklist</a
+            >.
           </p>
         </section>
 
